2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test some navigation utility functions.

	* glom/libglom/data_structure/layout/layoutgroup.cc: get_items_recursive():
  Return the child groups as well as their items.
	* tests/test_document_load.cc:
	Test DbUtils::layout_field_should_have_navigation() and 
	LayoutItem_Portal::get_suitable_table_to_view_details().
	
2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_empty(): Also test DbUtils::get_unused_database_name().

	* glom/libglom/db_utils.cc: get_unused_database_name(): Remove debug output.
	* tests/test_selfhosting_new_empty.cc: Excercise DbUtils::get_unused_database_name(),
	though we do not test it yet when the first choice already exists.

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_empty(): Correct and expand.

	* tests/test_selfhosting_new_empty.cc: Fix a CENTRAL->SELF typo. This 
	probably only appeared to work before because no database cluster was really 
	being initialized. Also actually create a database in the database cluster 
	and set its system preferences table's record.

2011-12-01  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_then_lookup: Minor improvements.

	* tests/test_selfhosting_new_then_lookup.cc: Avoid some hard-coding.

2011-12-01  Murray Cumming  <murrayc@murrayc.com>

	Moved some lookup functions into DbUtils and added a test for them.

	* glom/libglom/db_utils.[h|cc]:
	* glom/base_db.[h|cc]: Moved get_fields_for_table(), 
	get_fields_for_table_one_field(), get_lookup_fields(), and 
	get_lookup_value() to the DbUtils namespace, taking an extra 
	Document parameter.
	* glom/libglom/document/document.[h|cc]: Moved get_lookup_fields() to 
	DbUtils too.

	* glom/base_db_table_data.cc
	* glom/mode_data/box_data.cc
	* glom/mode_data/box_data_calendar_related.cc
	* glom/mode_data/box_data_details.cc
	* glom/mode_data/box_data_list_related.cc
	* glom/mode_data/db_adddel/db_adddel.cc