@@ -45,6 +45,14 @@ bool contains_named(const T_Container& container, const Glib::ustring& name)
   return iter != container.end();
 }
 
+static bool groups_contain_named(const Glom::Document::type_list_groups& container, const Glib::ustring& name)
+{
+  const Glom::Document::type_list_groups::const_iterator iter =
+    std::find_if(container.begin(), container.end(),
+      Glom::predicate_FieldHasName<Glom::GroupInfo>(name));
+  return iter != container.end();
+}
+
 static Glom::sharedptr<const Glom::LayoutItem_Field> get_field_on_layout(const Glom::Document& document, const Glib::ustring& layout_table_name, const Glib::ustring& table_name, const Glib::ustring& field_name)
 {
   const Glom::Document::type_list_layout_groups groups = 
@@ -284,6 +292,16 @@ int main()
     std::cerr << "Failure: The print layout has no layout group." << std::endl;
     return false;
   }
+  
+  //Test user groups:
+  Glom::Document::type_list_groups groups = document.get_groups();
+  g_assert(groups_contain_named(groups, "glom_developer"));
+  
+  const Glib::ustring group_name = "accounts";
+  g_assert(groups_contain_named(groups, group_name));
+  document.remove_group(group_name);
+  groups = document.get_groups();
+  g_assert(!groups_contain_named(groups, group_name));
 
   //Test navigation:
   if(!needs_navigation(document, "scenes", "location_id"))
